FIX the manufacturer cache and removed unneeded local PriceHelper

--- a/resources/lang/de/logs.properties
+++ b/resources/lang/de/logs.properties
@@ -1,5 +1,5 @@
-variationNotPartOfExportStock       = "Variante übersprungen: Kein Bestand."
-variationNotPartOfExportPrice       = "Variante übersprungen: Kein Preis."
+variationNotPartOfExportStock       = "Variante ohne Bestand."
+variationNotPartOfExportPrice       = "Variantenpreis negativ."
 
 writtenLines                        = "Anzahl der geschriebenen Zeilen."
 esDuration                          = "Auslesens der Artikeldaten aus Elastic Search."
