--- a/resources/lang/en/logs.properties
+++ b/resources/lang/en/logs.properties
@@ -1,5 +1,5 @@
-variationNotPartOfExportStock       = "Variation skipped: No stock."
-variationNotPartOfExportPrice       = "Variation skipped: No price."
+variationNotPartOfExportStock       = "Variation has no stock."
+variationNotPartOfExportPrice       = "Variation price is negative."
 
 writtenLines                        = "Amount of written lines."
 esDuration                          = "Elastic Search data is read."
