--- a/resources/lang/en/logs.properties
+++ b/resources/lang/en/logs.properties
@@ -1,2 +1,2 @@
-occurredElasticSearchErrors         = "An elastic search error occurred"
+occurredElasticSearchErrors         = "An elastic search error occurred."
 fillRowError                        = "Could not write the row."
